--- a/_pages/thesis/thesis_abstract.html
+++ b/_pages/thesis/thesis_abstract.html
@@ -5,6 +5,7 @@ title:  "Prediction of NMR J-coupling in condensed matter"
 date:   2014-10-03
 categories: page
 navorder: 1
+css: main.css
 ---
 
 <p>Nuclear magnetic resonance (NMR) is a popular spectroscopic method and has widespread use in many fields. Recent developments in solid-state NMR have increased interest in experiment and, alongside simultaneous developments in computational theory, have led to the field dubbed 'NMR crystallography.' This is a suite of methodologies, complementing the capabilities of other crystallographic methods in the determination of atomic structure, especially when large crystals cannot be made and when exploring materials with phenomena such as compositional, positonal and dynamic disorder. NMR J-coupling is the indirect coupling between nuclear spins, which, when measured, can reveal a wealth of information about structure and bonding.</p>
