--- a/_pages/thesis/thesis_abstract.html
+++ b/_pages/thesis/thesis_abstract.html
@@ -12,5 +12,5 @@ css: main.css
 
 <p>This thesis develops and applies the method of Joyce for the prediction of NMR J-coupling in condensed matter systems using plane-wave pseudopotential density-functional theory, an important requirement for efficient treatment of finite and infinite periodic systems. It describes the first-ever method for the use of ultrasoft pseudopotentials and inclusion of special relativistic effects in J-coupling prediction, allowing for the treatment of a wider range of materials systems and overall greater user friendliness, thus making the method more accessible and attractive to the wider scientific community.</p>
 
-<p><button type="button" class="btn btn-default" disabled>Download PDF</button> <span class='text-info'>coming soon</span></p>
+<p><button type="button" class="btn btn-default"><a href="https://ora.ox.ac.uk/objects/uuid:39ee4a7c-58f9-49fa-b14c-16bc03141e53">Download</a></button></p>
 
