--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ css: main.css
       <h2>Publications</h2>
       <ul class='publications'>
         <li>
-            <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a></div>
+            <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a> [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
             <div class="journal"><em>arXiv</em>, 2018</a>
             <div class="authors">Max Jaderberg, Wojciech M. Czarnecki, Iain Dunning, Luke Marris, Guy Lever, Antonio Garcia Castaneda, Charles Beattie, Neil C. Rabinowitz, Ari S. Morcos, Avraham Ruderman, Nicolas Sonnerat, <span class='me'>Tim Green</span>, Louise Deason, Joel Z. Leibo, David Silver, Demis Hassabis, Koray Kavukcuoglu, Thore Graepel</div>
         </li>
