--- a/index.html
+++ b/index.html
@@ -27,8 +27,13 @@ css: main.css
 
       <p>I was also co-founder of <a href="https://democracyclub.org.uk/" target="_blank">Democracy Club</a>, an effort to improve UK citizens' experience of democracy using technology.</p>
       
-      <h2>Publications</h2>
+      <h2>Research</h2>
       <ul class='publications'>
+        <li>
+            <div class="name"><a href="https://deepmind.com/blog/alphafold/">AlphaFold: Using AI for scientific discovery</a></div>
+            <div class="journal">Blog post, 2018, publication to follow</a>
+            <div class="authors">Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Zidek, Sandy Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, David Jones, David Silver, Koray Kavukcuoglu, Demis Hassabis, Andrew Senior</div>
+        </li>
         <li>
             <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a></div>
             <div class="journal"><em>arXiv</em>, 2018 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</a>
