--- a/index.html
+++ b/index.html
@@ -30,33 +30,38 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
-            <div class="name"><a href="https://deepmind.com/blog/alphafold/">AlphaFold: Using AI for scientific discovery</a></div>
-            <div class="journal">Blog post, 2018, publication to follow</a>
-            <div class="authors">Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Zidek, Sandy Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, David Jones, David Silver, Koray Kavukcuoglu, Demis Hassabis, Andrew Senior</div>
+            <div class="name"><a href="https://www.nature.com/articles/s41586-019-1923-7">Improved protein structure prediction using potentials from deep learning</a></div>
+            <div class="journal">Nature, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/AlphaFold-Using-AI-for-scientific-discovery'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
+            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis </div>
+        </li>
+        <li>
+            <div class="name"><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/prot.25834">Protein structure prediction using multiple deep neural networks in the 13th Critical Assessment of Protein Structure Prediction (CASP13)</a></div>
+            <div class="journal">PROTEINS, 2018</div>
+            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis </div>
         </li>
         <li>
             <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a></div>
-            <div class="journal"><em>arXiv</em>, 2018 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</a>
+            <div class="journal"><em>arXiv</em>, 2018 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
             <div class="authors">Max Jaderberg, Wojciech M. Czarnecki, Iain Dunning, Luke Marris, Guy Lever, Antonio Garcia Castaneda, Charles Beattie, Neil C. Rabinowitz, Ari S. Morcos, Avraham Ruderman, Nicolas Sonnerat, <span class='me'>Tim Green</span>, Louise Deason, Joel Z. Leibo, David Silver, Demis Hassabis, Koray Kavukcuoglu, Thore Graepel</div>
         </li>
         <li>
             <div class="name"><a href="https://arxiv.org/abs/1711.09846">Population Based Training of Neural Networks</a></div>
-            <div class="journal"><em>arXiv</em>, 2017</a>
+            <div class="journal"><em>arXiv</em>, 2017</div>
             <div class="authors">Max Jaderberg, Valentin Dalibard, Simon Osindero, Wojciech M Czarnecki, Jeff Donahue, Ali Razavi, Oriol Vinyals, <span class='me'>Tim Green</span>, Iain Dunning, Karen Simonyan, Chrisantha Fernando, Koray Kavukcuoglu</div>
         </li>
         <li>
             <div class="name"><a href="https://arxiv.org/abs/1705.06950">The kinetics human action video dataset</a></div>
-            <div class="journal"><em>arXiv</em>, 2017</a>
+            <div class="journal"><em>arXiv</em>, 2017</div>
             <div class="authors">Will Kay, Joao Carreira, Karen Simonyan, Brian Zhang, Chloe Hillier, Sudheendra Vijayanarasimhan, Fabio Viola, <span class='me'>Tim Green</span>, Trevor Back, Paul Natsev, Mustafa Suleyman, Andrew Zisserman</div>
         </li>
         <li>
             <div class="name"><a href="http://dx.doi.org/10.1021/acs.inorgchem.6b01121">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
-            <div class="journal"><em>Inorganic Chemistry</em>, 2016</a>
+            <div class="journal"><em>Inorganic Chemistry</em>, 2016</div>
             <div class="authors">Paula Sanz Camacho, David McKay, Daniel M. Dawson, Christin Kirst, Jonathan R. Yates, <span class='me'>Timothy F.G. Green</span>, David B. Cordes, Alexandra M.Z. Slawin, J. Derek Woollins, Sharon E. Ashbrook</div>
         </li>
         <li>
             <div class="name"><a href="http://dx.doi.org/10.1016/j.ssnmr.2016.05.004">Visualization and processing of computed solid-state NMR parameters: MagresView and MagresPython</a></div>
-            <div class="journal"><em>Journal of Solid State Nuclear Magnetic Resonance</em>, 2016</a>
+            <div class="journal"><em>Journal of Solid State Nuclear Magnetic Resonance</em>, 2016</div>
             <div class="authors">Simone Sturniolo, <span class='me'>Timothy F.G. Green</span>, Robert M. Hanson, Miri Zilka, Keith Refson, Paul Hodgkinson, Steven P. Brown, Jonathan R. Yates</div>
         </li>
         <li>
