--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@ css: main.css
       <ul class='publications'>
         <li>
             <div class="name"><a href="https://www.nature.com/articles/s41586-019-1923-7">Improved protein structure prediction using potentials from deep learning</a></div>
-            <div class="journal">Nature, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/AlphaFold-Using-AI-for-scientific-discovery'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
-            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis </div>
+            <div class="journal"><em>Nature</em>, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/AlphaFold-Using-AI-for-scientific-discovery'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
+            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis</div>
         </li>
         <li>
             <div class="name"><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/prot.25834">Protein structure prediction using multiple deep neural networks in the 13th Critical Assessment of Protein Structure Prediction (CASP13)</a></div>
-            <div class="journal">PROTEINS, 2018</div>
-            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis </div>
+            <div class="journal"><em>PROTEINS</em>, 2018</div>
+            <div class="authors">Andrew W. Senior, Richard Evans, John Jumper, James Kirkpatrick, Laurent Sifre, <span class='me'>Tim Green</span>, Chongli Qin, Augustin Žídek, Alexander W. R. Nelson, Alex Bridgland, Hugo Penedones, Stig Petersen, Karen Simonyan, Steve Crossan, Pushmeet Kohli, David T. Jones, David Silver, Koray Kavukcuoglu & Demis Hassabis</div>
         </li>
         <li>
-            <div class="name"><a href="https://arxiv.org/abs/1807.01281">Human-level performance in first-person multiplayer games with population-based deep reinforcement learning</a></div>
-            <div class="journal"><em>arXiv</em>, 2018 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
+            <div class="name"><a href="https://science.sciencemag.org/content/364/6443/859">Human-level performance in 3D multiplayer games with population-based reinforcement learning</a></div>
+            <div class="journal"><em>Science</em>, 2019 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
             <div class="authors">Max Jaderberg, Wojciech M. Czarnecki, Iain Dunning, Luke Marris, Guy Lever, Antonio Garcia Castaneda, Charles Beattie, Neil C. Rabinowitz, Ari S. Morcos, Avraham Ruderman, Nicolas Sonnerat, <span class='me'>Tim Green</span>, Louise Deason, Joel Z. Leibo, David Silver, Demis Hassabis, Koray Kavukcuoglu, Thore Graepel</div>
         </li>
         <li>
