--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
+            <img src="images/Origami-CASP-181127-r01_fig1-folding.gif" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.nature.com/articles/s41586-019-1923-7">Improved protein structure prediction using potentials from deep learning</a></div>
-            <div class="journal"><em>Nature</em>, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/AlphaFold-Using-AI-for-scientific-discovery'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
+            <div class="journal"><em>Nature</em>, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/alphafold-casp13y'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <div class="name"><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/prot.25834">Protein structure prediction using multiple deep neural networks in the 13th Critical Assessment of Protein Structure Prediction (CASP13)</a></div>
