--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@ css: main.css
             <div class="journal"><em>Science</em>, 2019 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
         </li>
         <li>
+            <img src="images/pbt.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://arxiv.org/abs/1711.09846">Population Based Training of Neural Networks</a></div>
             <div class="journal"><em>arXiv</em>, 2017</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <div class="name"><a href="https://arxiv.org/abs/1705.06950">The kinetics human action video dataset</a></div>
