--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@ css: main.css
             <div class="journal"><em>PROTEINS</em>, 2018</div>
         </li>
         <li>
+            <img src="images/ctf2.gif" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://science.sciencemag.org/content/364/6443/859">Human-level performance in 3D multiplayer games with population-based reinforcement learning</a></div>
             <div class="journal"><em>Science</em>, 2019 [<a href='https://deepmind.com/blog/capture-the-flag/'>blog post</a>]</div>
+           <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <img src="images/pbt.png" style="float: left;height: 150px;margin-right: 1rem;">
