--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/distogram.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://onlinelibrary.wiley.com/doi/full/10.1002/prot.25834">Protein structure prediction using multiple deep neural networks in the 13th Critical Assessment of Protein Structure Prediction (CASP13)</a></div>
             <div class="journal"><em>PROTEINS</em>, 2018</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <img src="images/ctf2.gif" style="float: left;height: 150px;margin-right: 1rem;">
