--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/kinetics.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://arxiv.org/abs/1705.06950">The kinetics human action video dataset</a></div>
             <div class="journal"><em>arXiv</em>, 2017</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <div class="name"><a href="http://dx.doi.org/10.1021/acs.inorgchem.6b01121">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
