--- a/index.html
+++ b/index.html
@@ -60,8 +60,10 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/ps.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="http://dx.doi.org/10.1021/acs.inorgchem.6b01121">Investigating Unusual Homonuclear Intermolecular “Through-Space” J Couplings in Organochalcogen Systems</a></div>
             <div class="journal"><em>Inorganic Chemistry</em>, 2016</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <div class="name"><a href="http://dx.doi.org/10.1016/j.ssnmr.2016.05.004">Visualization and processing of computed solid-state NMR parameters: MagresView and MagresPython</a></div>
