--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/magres-format.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="http://dx.doi.org/10.1016/j.ssnmr.2016.05.004">Visualization and processing of computed solid-state NMR parameters: MagresView and MagresPython</a></div>
             <div class="journal"><em>Journal of Solid State Nuclear Magnetic Resonance</em>, 2016</div>
+          <div class="clear" style="clear: both;"></div>
         </li>
         <li>
             <div class="name"><a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</a></div>
