--- a/index.html
+++ b/index.html
@@ -69,19 +69,25 @@ css: main.css
             <img src="images/magres-format.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="http://dx.doi.org/10.1016/j.ssnmr.2016.05.004">Visualization and processing of computed solid-state NMR parameters: MagresView and MagresPython</a></div>
             <div class="journal"><em>Journal of Solid State Nuclear Magnetic Resonance</em>, 2016</div>
-          <div class="clear" style="clear: both;"></div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/gehlenite.gif" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</a></div>
             <div class="journal"><em>J. Am. Chem. Soc.</em>, 2015, 137 (19), 6172&ndash;6175</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/jzora.png" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href='http://scitation.aip.org/content/aip/journal/jcp/140/23/10.1063/1.4882678'>Relativistic nuclear magnetic resonance J-coupling with ultrasoft pseudopotentials and the zeroth-order regular approximation</a></div>
             <div class="journal"><em>J. Chem. Phys.</em>, 2014, 140, 234106, <a href='http://arxiv.org/abs/1403.0524'>arXiv</a></div>
+            <div class="clear" style="clear: both;"></div>
         </li>
         <li>
+            <img src="images/gehlenite.gif" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href='http://pubs.acs.org/doi/full/10.1021/cm3016935'>Elucidation of the Al/Si Ordering in Gehlenite Ca<sub>2</sub>Al<sub>2</sub>SiO<sub>7</sub> by Combined <sup>29</sup>Si and <sup>27</sup>Al NMR Spectroscopy/Quantum Chemical Calculations</a></div>
             <div class="journal"><em>Chem. Mater.</em>, 2012, 24 (21), 4068&ndash;4079</div>
+            <div class="clear" style="clear: both;"></div>
         </li>
       </ul>
       
