--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
-            <img src="images/pse.gif" style="float: left;height: 150px;margin-right: 1rem;">
+            <img src="images/pse.jpg" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href='http://pubs.acs.org/doi/abs/10.1021/jacs.5b03353'>Unusual Intermolecular “Through-Space” J Couplings in P–Se Heterocycles</a></div>
             <div class="journal"><em>J. Am. Chem. Soc.</em>, 2015, 137 (19), 6172&ndash;6175</div>
             <div class="clear" style="clear: both;"></div>
