--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@ css: main.css
       <h1>Tim Green</h1>
       <ul class='links'>
         <li><a href='mailto:timothy.green@gmail.com'>Email</a></li>
-        <li><a href='/cv.pdf'>CV</a></li>
         <li><a href='http://twitter.com/tfgg2'>Twitter</a></li>
         <li><a href='http://github.com/tfgg'>GitHub</a></li>
         <li><a href='https://uk.linkedin.com/in/tim-green-6832886'>LinkedIn</a></li>
         <div style='clear:both;'></div>
       </ul>
 
-      <p class='block-highlight'>I'm on the Science Team at <a href="https://deepmind.com/">DeepMind</a> as a Research Engineer. I work on <a href='https://deepmind.com/blog/alphafold/'>AlphaFold</a> and related research.</p>
+      <p class='block-highlight'>I'm a Research Engineer on the Science team at <a href="https://deepmind.com/">DeepMind</a>. I work on <a href='https://deepmind.com/blog/alphafold/'>AlphaFold</a> and related research.</p>
 
       <p>My PhD was supervised by <a href='http://users.ox.ac.uk/~oums0549/' target="_blank">Jonathan Yates</a> at the University of Oxford and my thesis was entitled <em><a href='/thesis/abstract/'>Prediction of NMR J-coupling in condensed matter</a></em>. My research interests included computational materials science, density functional theory, quantum chemistry, condensed matter and nuclear magnetic resonance.</p>
 
