--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ css: main.css
 <div class="container front_page">
   <div class="row">
     <div class="col-md-2 logoface">
-      <img src='images/my_face.jpg' class='my_face'/>
+      <img src='images/tim.jpg' class='my_face'/>
     </div>
     <div class="col-md-8">
       <h1>Tim Green</h1>
