--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
+            <img src="images/alhafold2.gif" style="float: left;height: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://predictioncenter.org/casp14/doc/CASP14_Abstracts.pdf">AlphaFold2: High Accuracy Protein Structure Prediction Using Deep Learning</a></div>
+            <div class="journal">To be published [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>]</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
             <img src="images/Origami-CASP-181127-r01_fig1-folding.gif" style="float: left;height: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.nature.com/articles/s41586-019-1923-7">Improved protein structure prediction using potentials from deep learning</a></div>
             <div class="journal"><em>Nature</em>, 2020 [<a href='https://deepmind.com/blog/alphafold/'>blog post 1</a>] [<a href='https://deepmind.com/blog/article/alphafold-casp13y'>blog post 2</a>] [<a href='https://www.nature.com/articles/d41586-019-03951-0'>Nature commentary</a>]</div>
