--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
-            <img src="images/alphafold2.gif" style="float: left;height: 150px;margin-right: 1rem;">
+            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://predictioncenter.org/casp14/doc/CASP14_Abstracts.pdf">AlphaFold2: High Accuracy Protein Structure Prediction Using Deep Learning</a></div>
             <div class="journal">To be published [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>]</div>
             <div class="clear" style="clear: both;"></div>
