Add recent AF papers.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,26 @@ css: main.css
       <ul class='publications'>
         <li>
             <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
-            <div class="name"><a href="https://predictioncenter.org/casp14/doc/CASP14_Abstracts.pdf#page=23">AlphaFold2: High Accuracy Protein Structure Prediction Using Deep Learning</a></div>
-            <div class="journal">To be published [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>]</div>
+            <div class="name"><a href="https://www.biorxiv.org/content/10.1101/2021.10.04.463034v1.abstract">Protein complex prediction with AlphaFold-Multimer</a></div>
+            <div class="journal"><em>bioRxiv</em>, 2021</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
+            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/prot.26257">Applying and improving AlphaFold at CASP14</a></div>
+            <div class="journal"><em>PROTEINS</em>, 2021</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
+            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://www.nature.com/articles/s41586-021-03828-1">Highly accurate protein structure prediction for the human proteome</a></div>
+            <div class="journal"><em>Nature</em>, 2021</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
+            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://www.nature.com/articles/s41586-021-03819-2">Highly accurate protein structure prediction with AlphaFold</a></div>
+            <div class="journal"><em>Nature</em>, 2021 [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>]</div>
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
