--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ css: main.css
         <li>
             <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.nature.com/articles/s41586-021-03819-2">Highly accurate protein structure prediction with AlphaFold</a></div>
-            <div class="journal"><em>Nature</em>, 2021 [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>]</div>
+            <div class="journal"><em>Nature</em>, 2021 [<a href='https://deepmind.com/blog/article/alphafold-a-solution-to-a-50-year-old-grand-challenge-in-biology/'>blog post</a>] [<a href='https://github.com/deepmind/alphafold'>GitHub</a>]</div>
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
