--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
-            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <img src="images/nature_proteome.png" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.nature.com/articles/s41586-021-03828-1">Highly accurate protein structure prediction for the human proteome</a></div>
             <div class="journal"><em>Nature</em>, 2021</div>
             <div class="clear" style="clear: both;"></div>
