--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ css: main.css
         <li>
             <img src="images/nature_proteome.png" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.nature.com/articles/s41586-021-03828-1">Highly accurate protein structure prediction for the human proteome</a></div>
-            <div class="journal"><em>Nature</em>, 2021</div>
+            <div class="journal"><em>Nature</em>, 2021 [<a href='https://alphafold.ebi.ac.uk/'>AlphaFold Database</a>]</div>
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
