--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
-            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <img src="images/multimer.jpeg" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.biorxiv.org/content/10.1101/2021.10.04.463034v1.abstract">Protein complex prediction with AlphaFold-Multimer</a></div>
             <div class="journal"><em>bioRxiv</em>, 2021</div>
             <div class="clear" style="clear: both;"></div>
