--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ css: main.css
             <div class="clear" style="clear: both;"></div>
         </li>
         <li>
-            <img src="images/alphafold2.gif" style="float: left;width: 150px;margin-right: 1rem;">
+            <img src="images/figure_5.png" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://onlinelibrary.wiley.com/doi/abs/10.1002/prot.26257">Applying and improving AlphaFold at CASP14</a></div>
             <div class="journal"><em>PROTEINS</em>, 2021</div>
             <div class="clear" style="clear: both;"></div>
