--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
+            <img src="images/62e1122b086bb045a5120c87_af200_blog-p-2600.webp" style="float: left;width: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://www.deepmind.com/blog/alphafold-reveals-the-structure-of-the-protein-universe">AlphaFold reveals the structure of the protein universe</a></div>
+            <div class="journal"><em>DeepMind Blog</em>, 2022 [<a href='https://alphafold.ebi.ac.uk/'>AlphaFold Database</a>]</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
             <img src="images/multimer.jpeg" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://www.biorxiv.org/content/10.1101/2021.10.04.463034v1.abstract">Protein complex prediction with AlphaFold-Multimer</a></div>
             <div class="journal"><em>bioRxiv</em>, 2021</div>
