--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 title: Tim Green
 css: main.css
 ---
-<meta http-equiv="Refresh" content="0; URL=https://alphafoldserver.com/" />
+<meta http-equiv="Refresh" content="0; URL=https://golgi.sandbox.google.com/" />
 
 <div class="container front_page">
   <div class="row">
