--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@ css: main.css
       <h2>Research</h2>
       <ul class='publications'>
         <li>
+            <img src="images/af3_nature.png" style="float: left;width: 150px;margin-right: 1rem;">
+            <div class="name"><a href="https://www.nature.com/articles/s41586-024-07487-w">Accurate structure prediction of biomolecular interactions with AlphaFold 3</a></div>
+            <div class="journal"><em>Nature</em>, 2024 [<a href='https://alphafoldserver.com/'>AlphaFold Server</a>] [<a href='https://blog.google/technology/ai/google-deepmind-isomorphic-alphafold-3-ai-model/'>blog post</a>]</div>
+            <div class="clear" style="clear: both;"></div>
+        </li>
+        <li>
             <img src="images/af-latest.jpeg" style="float: left;width: 150px;margin-right: 1rem;">
             <div class="name"><a href="https://deepmind.google/discover/blog/a-glimpse-of-the-next-generation-of-alphafold/">AlphaFold-latest: A glimpse of the next generation of AlphaFold</a></div>
             <div class="journal"><em>DeepMind Blog</em>, 2023 [<a href='https://storage.googleapis.com/deepmind-media/DeepMind.com/Blog/a-glimpse-of-the-next-generation-of-alphafold/alphafold_latest_oct2023.pdf'>Whitepaper</a>]</div>
