--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ css: main.css
       <ul class='links'>
         <li><a href='mailto:timothy.green@gmail.com'>Email</a></li>
         <li><a href='http://twitter.com/tfgg2'>Twitter</a></li>
+        <li><a href='https://bsky.app/profile/tfgg.me'>Bluesky</a></li>
         <li><a href='http://github.com/tfgg'>GitHub</a></li>
         <li><a href='https://uk.linkedin.com/in/tim-green-6832886'>LinkedIn</a></li>
         <div style='clear:both;'></div>
